# gen-ir

./: .gitignore  .markdownlint.json  .periphery.yml  .swiftlint.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Package.resolved  Package.swift  README.md  SECURITY.md  versions.txt
.github/workflows/: SwiftLint.yml  build.yml  periphery.yml  release.yml
Documentation/: branching_model.md  releasing_an_update.md
Documentation/files/: branching_model.drawio
GenIRExtensions/: Package.swift  README.md
GenIRExtensions/Sources/GenIRExtensions/: Collection+Extensions.swift  Decoding+Extensions.swift  DecodingExtensions.swift  FileManager+Extension.swift  Process+Extension.swift  String+Extension.swift  URL+Extensions.swift
GenIRExtensions/Tests/GenIRExtensionsTests/: GenIRExtensionsTests.swift
GenIRLogging/: Package.swift  README.md
GenIRLogging/Sources/GenIRLogging/: GenIRLogging.swift
GenIRLogging/Tests/GenIRLoggingTests/: GenIRLoggingTests.swift
PBXProjParser/: Package.resolved  Package.swift  README.md
PBXProjParser/Sources/PBXProjParser/: BuildTarget.swift  PackageParser.swift  ProjectParser.swift  XcodeProject.swift  XcodeWorkspace.swift
PBXProjParser/Sources/projparser/: projparser.swift
PBXProjParser/Tests/PBXProjParserTests/: PBXProjParserTests.swift
PBXProjParser/Tests/pbxproj-parserTests/: pbxproj_parserTests.swift
PIF/: NOTICE.txt  Package.resolved  Package.swift
PIF/Sources/PIFSupport/: PIF.swift  PIFSupport.swift
PIF/Sources/pif-parser/: pif-parser.swift
PIF/Tests/PIFTests/: PIFTests.swift
Sources/DependencyGraph/: DependencyGraph.swift  DependencyGraphBuilder.swift  Edge.swift  Node.swift
Sources/GenIR/: BuildCacheManipulator.swift  BuildManifestParser.swift  BuildOutputHandler.swift  Compiler.swift  CompilerCommandRunner.swift  DebugData.swift  GenIR.swift  OutputPostprocessor.swift  PIFCache.swift  PifCacheHandler.swift  StdoutLogHandler.swift  Target.swift  TargetParser.swift  Versions.swift  XCConfigParser.swift  XcodeLogParser.swift
Sources/GenIR/ConfigParser/: XCConfig.swift  XCConfigArch.swift  XCConfigCondition.swift  XCConfigParser.swift  XCConfigSDK.swift
Sources/GenIR/Dependency Graph/: DependencyGraph.swift  DependencyGraphBuilder.swift  Edge.swift  Node.swift
Sources/GenIR/Extensions/: FileManager+Extension.swift  Process+Extension.swift  String+Extension.swift  URL+Extensions.swift
Sources/GenIR/Targets/: GenProject.swift  GenTarget.swift  Target.swift  Targets.swift
Sources/GenIR/Utils/: ManifestFinder.swift  ManifestFinderError.swift
Sources/XcodeHasher/: XcodeHasher.swift
Sources/gen-ir/: Compiler.swift  CompilerCommandRunner.swift  OutputPostprocessor.swift  StdoutLogHandler.swift  Versions.swift  XcodeLogParser.swift  gen_ir.swift
Sources/gen-ir/Extensions/: FileManager+Extension.swift  Process+Extension.swift  String+Extension.swift  URL+Extensions.swift
Sources/gen-sil/: Configuration.swift  XcodeCoordinator.swift  XcodeLogParser.swift  gen_sil.swift
Sources/gen-sil/Configuration/: CLIConfiguration.swift  Configuration.swift  Environment.swift  XcodeConfiguration.swift
Sources/gen-sil/Coordinators/: CLICoordinator.swift  XcodeCoordinator.swift
Sources/gen-sil/Extensions/: FileManager+Extension.swift  Process+Extension.swift  String+Extension.swift  URL+Extensions.swift
Sources/gen-sil/Models/: OutputFile.swift
Sources/gen-sil/Runner/: CLIRunner.swift  Runner.swift  XcodeRunner.swift
TestAssets/CMakeDiscoveryTest/: CMakeLists.txt
TestAssets/CMakeDiscoveryTest/Source/: App.swift
TestAssets/CMakeTest/: CMakeLists.txt
TestAssets/CocoaPodsFrameworkTest/CocoapodsFrameworkTest/: Podfile
TestAssets/GH46/GH46.xcworkspace/: contents.xcworkspacedata
TestAssets/GH48/MyApp/: ContentView.swift  MyAppApp.swift
TestAssets/GH48/MyApp.xcodeproj/: project.pbxproj
TestAssets/GH48/TestPackage/: Package.swift
TestAssets/ManyTargetTest/ManyFramework/: ManyFramework.h
TestAssets/ManyTargetTest/ManyTargetTest/: ContentView.swift  ManyTargetTestApp.swift
TestAssets/ManyTargetTest/ManyTargetTest App Clip/: ContentView.swift  ManyTargetTest_App_ClipApp.swift
TestAssets/ManyTargetTest/ManyTargetTest.xcodeproj/: project.pbxproj
TestAssets/ManyTargetTest/ManyTargetsTest/: ContentView.swift  ManyTargetsTest.entitlements  ManyTargetsTestApp.swift
TestAssets/MultipleApp/MultipleApp/: ContentView.swift  CopyOnly.swift  MultipleAppApp.swift
TestAssets/MultipleApp/MultipleApp.xcodeproj/: project.pbxproj
TestAssets/OutputPostprocessorFileMoverTests/ImageFramework/: Image.swift  ImageFramework.h
TestAssets/OutputPostprocessorFileMoverTests/ImageLibrary/: Image.swift
TestAssets/OutputPostprocessorFileMoverTests/OutputPostprocessorFileMoverTests/: ContentView.swift  Image.swift  OutputPostprocessorFileMoverTestsApp.swift
TestAssets/OutputPostprocessorFileMoverTests/OutputPostprocessorFileMoverTests.xcodeproj/: project.pbxproj
TestAssets/Umbrella/: Podfile
TestAssets/Umbrella/Common/: Common.podspec
TestAssets/Umbrella/Networking/: Networking.podspec
TestAssets/Umbrella/Umbrella/: GetOrg.swift  Umbrella.h
TestAssets/Umbrella/Umbrella.xcodeproj/: project.pbxproj
TestAssets/UmbrellaTest/: Podfile  UmbrellaTest.podspec
TestAssets/XCConfigurationTest/: Base.xcconfig  Debug.xcconfig  Middle.xcconfig  Production.xcconfig
TestAssets/transitive-project-and-components/: ArchiveLog.txt
TestAssets/transitive-project-test2/: buildLog.txt
TestAssets/transitive-project-test3/: Archive LoggingApp_2023-08-17T17-50-52.txt  note.md
Tests/GenIRTests/: CMakeDiscoveryTests.swift  CMakeTests.swift  DependencyGraphTests.swift  ManyTargetTest.swift  MultipleAppTests.swift  OutputPostprocessorFileMoverTests.swift  PIFCacheTests.swift  TestContext.swift  TestHelpers.swift  UmbrellaTests.swift  Utilities.swift  WorkspaceContainerTests.swift  WorkspaceTests.swift  XCConfigTests.swift  XcodeLogParserTests.swift  gen_irTests.swift  gh46.swift  gh48.swift
Tests/gen-irTests/: gen_irTests.swift
Tests/gen-silTests/: gen_silTests.swift
pbxproj-parser/: Package.swift  README.md
(+231 files in other folders)
